sass/partials/_foundation.scss
/* ... */
.place {
  @include flex(1 auto !important);
}

.icon-bank {
  background-color: #82b8c2;
  color: $white;
  @include flex-box;
  align-content: center;
  margin-bottom: 10px;

  ul {
    list-style: none;
    padding: 10px;
    margin: 0;
    @include flex(2 0 auto);
  }
  span {
    @include flex(1 0 auto);

    svg {
      width: 30px;
      height: 30px;
      margin: 15px auto;
      display: block;
    }

    &:first-child {
      background-color: #91c9d4;
    }
  }
}

.workflow {
  padding: 10px;
  margin: 0;
  list-style: none;
  @include flex-box;
  flex-flow: row wrap;
  

  li {
    @include flex(1 0 30%);
    width: 33%;
    float: left;
    text-align: left;
    padding: 15px;
    background-color: $white;
    margin-right: 20px;
    position: relative;
    margin-bottom: 10px;
    border-right: 1px solid $gray;
    @include transition(all,.2s, ease-in);
    max-width: 30%;
    font-size: .9em;
    line-height: 24px;
    background-color: #fdfdfd;

    &[class*="step"] {
      min-height: 150px;
    }

    &.title {
      position: relative;
      padding: 0 0 0 20px;
      max-width: 100%;
      width: 100%;
      line-height: 1;
      font-size: 1.2em;
      
      h4 {
        margin-left: 10px;
        display: inline-block;
        text-decoration: none;
        vertical-align: middle;
        font-weight: 400;

        a { 
          color: $purple;
          font-size: 1.8em;
          text-decoration: none;
        }
      }

      &:before {
        content: "WF";
        vertical-align: middle;
        width: 40px;
        height: 40px;
        background-color: $red;
        color: $white;
        line-height: 1;
        position: relative;
        left: 0;
        top: 0;
        bottom: 0;
        padding: 13px 10px;
        font-size: .9em;
        line-height: 1;
        @include radius(100%);
        margin: auto;
        display: inline-block;
      }

      &:after {
        content: none;
        display: none;
      }
    }

    &.completed-step {
      //border-color: $green;

      .title {
        &:before {
          content: "\62";
          font-family: "insurecx" !important;
          font-style: normal !important;
          font-weight: normal !important;
          font-variant: normal !important;
          text-transform: none !important;
          speak: none;
          line-height: 1;
          vertical-align: middle;
          -webkit-font-smoothing: antialiased;
          -moz-osx-font-smoothing: grayscale;
          color: #6ED32D;
          position: absolute;
          left: 0;
          top: 5px;
          bottom: 0;
          margin: auto;
          display: block;
        }
      }
    }

    &.step {
      .title {
        color: $base !important;
      }

      b {
        color: $base;
        pointer-events: disabled;
      }
    }

    &.active-step {
      border-color: $red;
      background-color: #f5fbff;
      box-shadow: inset -10px 0px 10px -8px rgba(0,0,0,0.2);

      .title {
        &:before {
          color: $blue;
        }
      }
      &:after {
        content:"\203A";
        position: absolute;
        top: 0;
        bottom: 0;
        right: -10px;
        margin: auto;
        color: $red;
        font-weight: bold;
        font-size: 1.2em;
        line-height: .7;
        background-color: $white;
        width: 20px;
        height: 20px;
        @include radius(100%);
        text-align: center;
        display: block;
        border: 1px solid $red;
      }
    }

    &.lead, &:first-child {
      @include flex(1 0 100%);
      background-color: transparent;
      padding: 0;
      margin: 0 0 10px 0;
      border: none;
      
      &:after {
        content: "";
      }
    }
    &:after {
      content:"\203A";
      position: absolute;
      top: 0;
      bottom: 0;
      right: -10px;
      margin: auto;
      color: $gray;
      font-weight: bold;
      font-size: 1.2em;
      line-height: .7;
      background-color: $white;
      width: 20px;
      height: 20px;
      @include radius(100%);
      text-align: center;
      display: block;
      border: 1px solid $gray;
    }

    &:last-child {
      &:after {
        content: "-";
      }
    }
    &.status {
      &.completed {
        font-weight: bold;
      }

      &.failed {
        color: $red;
      }

      &.active {
        color: $blue;
      }
    }
    
    b {
      cursor: pointer;
      display: block;
      color: $red;

      &::before {
        content:"\203A";
        margin-right: 5px;
      }
    }
    .viewDesc {
      display: none;
      border-top: 1px solid $base;
      padding-top: 10px;

      button {
        display: block;
        margin-bottom: 5px;
      }
    }
    
    strong {
      display: block;
      margin-bottom: 10px;
    }

    ul {
      padding: 0;
      margin: 0;
      list-style: none;
      font-size: 1em;

      li {
        padding: 0;
        margin: 0 0 5px 0;
        border: none;
        width: 100%;
        float: none;
        background-color: transparent;
        &:after {
          content: none;
        }
      }
    }
  }
}

@media screen and (min-width: 791px) and (max-width: 990px) {}
@media screen and (min-width: 601px) and (max-width: 790px) {
  #cx-base-temp {
    .base {
      
      .row {
        flex-flow: row wrap;
        .box {
          @include flex(1 0 100%);

          &-half {
            @include flex(2 2 100%);
          }

          &-full {
            @include flex(1 1 100%);
          }
        }
      }
    }
  }
}
/* ... */

